@@ -145,8 +145,9 @@ BUILD)
           -Dmaven.javadoc.skip=true \
           -Dmaven.ut.reuseForks=true -Dmaven.it.reuseForks=false
 
+	MAVEN_OPTS="$MAVEN_OPTS -noverify --add-modules java.xml.bind"
     mvn coveralls:report \
-          $MAVEN_ARGS
+          $MAVEN_ARGS -
 
   elif [[ "$TRAVIS_BRANCH" == "branch-"* ]] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
     echo 'Build release branch'
